--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,14 @@
 body {
-  background-color: rgb(126, 204, 214);
+  background-color: silver;
+  img: 400px;
   font: "helvetica";
   padding: 25 25 25 25;
 }
 
 div {
-  border: 3px solid rgb(126, 204, 214);
-  margin: 0 0 0 50;
-  padding: 0 0 0 50;
+  border: none;
+  margin: 0 50 0 50;
+  padding: 0 20 0 50;
   height: 50px;
 }
 
@@ -54,6 +55,7 @@ ol {
 
 ul {
   column-count: 2;
+  list-style-type: disc;
 }
 
 /*<body background="URL">
